// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Shapes/ShapePickerPopover default 1`] = `
<div
  className="euiPopover emotion-euiPopover"
>
  <div
    className="euiPopover__anchor css-16vtueo-render"
  >
    <div
      className="euiPanel euiPanel--plain euiPanel--paddingSmall emotion-euiPanel-grow-m-s-plain"
    >
      <button
        className="euiLink emotion-euiLink-primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasShapePreview"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Shapes/ShapePickerPopover interactive 1`] = `
<div
  className="euiPopover emotion-euiPopover"
>
  <div
    className="euiPopover__anchor css-16vtueo-render"
  >
    <div
      className="euiPanel euiPanel--plain euiPanel--paddingSmall emotion-euiPanel-grow-m-s-plain"
    >
      <button
        className="euiLink emotion-euiLink-primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasShapePreview"
        >
          <svg
            fill="none"
            stroke="black"
            viewBox="-2.5 -2.5 105 105"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="100"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Shapes/ShapePickerPopover shape selected 1`] = `
<div
  className="euiPopover emotion-euiPopover"
>
  <div
    className="euiPopover__anchor css-16vtueo-render"
  >
    <div
      className="euiPanel euiPanel--plain euiPanel--paddingSmall emotion-euiPanel-grow-m-s-plain"
    >
      <button
        className="euiLink emotion-euiLink-primary"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasShapePreview"
        >
          <svg
            fill="none"
            stroke="black"
            viewBox="-2.5 -2.5 105 105"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="100"
              width="100"
              x="0"
              y="0"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
